--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "qiti-serv.iqc.uwaterloo/QITI/Projects/QITI-Website"
+baseURL = ""
 languageCode = "en-us"
 title = "Quantum Information with Trapped Ions"
 theme = "ananke"
