--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "home/qitilab1/QITI/Projects/QITI-Website"
+baseURL = "https://qiti-serv.iqc.uwaterloo.ca/QITI/projects/QITI-Website/public/home/qitilab1/QITI/Projects/QITI-Website"
 languageCode = "en-us"
 title = "Quantum Information with Trapped Ions"
 theme = "ananke"
