--- a/config.toml
+++ b/config.toml
@@ -4,6 +4,7 @@ title = "Quantum Information with Trapped Ions"
 theme = "ananke"
 SectionPagesMenu = "main"
 aginate = 5 # this is set low for demonstrating with dummy content. Set to a higher number
+summaryLength = 50
 
 [Params]
 background_color_class = "bg-black"
