played with formatting for different aspect ratios, added research and group tabs and copied some content over from the old site

--- a/config.toml
+++ b/config.toml
@@ -11,3 +11,5 @@ background_color_class = "bg-black"
 featured_image = "/images/header/MainHeader.gif"
 homeList = ["news", "publications"]
 
+[blackfriday]
+ hrefTargetBlank = true
