changed the image from thinker to default, this makes more sense if we ever want to change the default image to something not the thinker

--- a/config.toml
+++ b/config.toml
@@ -10,6 +10,7 @@ summaryLength = 50
 background_color_class = "bg-black"
 featured_image = "/images/header/MainHeader.gif"
 homeList = ["news", "publications"]
+favicon = "favicon.ico"
 
 [blackfriday]
  hrefTargetBlank = true
