created side-navigation-2 partial to show hieararchy in menu structure (parent, children).

--- a/config.toml
+++ b/config.toml
@@ -3,7 +3,7 @@ languageCode = "en-us"
 title = "Quantum Information with Trapped Ions"
 subtitle = "University of Waterloo"
 theme = "ananke"
-SectionPagesMenu = "main"
+# SectionPagesMenu = "mainmenu" #comment
 aginate = 5 # this is set low for demonstrating with dummy content. Set to a higher number
 summaryLength = 50
 
@@ -15,3 +15,35 @@ favicon = "favicon.ico"
 
 [blackfriday]
  hrefTargetBlank = true
+
+[menu]
+
+ [[menu.mainmenu]]
+    identifier = "Members"
+    name = "Members"
+    title = "Members"
+    url = "/members/"
+    weight = 1
+
+  [[menu.mainmenu]]
+    identifier = "Group"
+    name = "Group"
+    title = "Group"
+    url = "/group/"
+    parent = "Members"
+    weight = 1
+
+  [[menu.mainmenu]]
+    identifier = "Publications"
+    name = "Publications"
+    title = "Publications"
+    url = "/publications/"
+    weight = 2
+
+ [[menu.mainmenu]]
+    identifier = "Research"
+    name = "Research"
+    title = "Publication"
+    url = "/research/"
+    parent = "Publications"
+    weight = 1
