content and images added. Minor style tweaks.

--- a/config.toml
+++ b/config.toml
@@ -4,7 +4,7 @@ title = "Quantum Information with Trapped Ions"
 subtitle = "University of Waterloo"
 theme = "ananke"
 #SectionPagesMenu = "mainmenu" #comment
-aginate = 5 # this is set low for demonstrating with dummy content. Set to a higher number
+paginate = 5 # this is set low for demonstrating with dummy content. Set to a higher number
 summaryLength = 50
 
 [Params]
@@ -12,7 +12,6 @@ background_color_class = "bg-black"
 featured_image = "images/header/4-rod trap_w_ions.jpg"
 homeList = ["news", "publications"]
 favicon = "favicon.ico"
-
 
 [markup]
   [markup.goldmark]
