--- a/config.toml
+++ b/config.toml
@@ -11,7 +11,7 @@ summaryLength = 50
 background_color_class = "bg-black"
 featured_image = "images/header/4-rod trap_w_ions.jpg"
 homeList = ["news", "publications"]
-favicon = "favicon.ico"
+favicon = "images/favicon.ico"
 
 [markup]
   [markup.goldmark]
