myStyle css created to control font sizes, index.html modified for two column, wider layout.

--- a/config.toml
+++ b/config.toml
@@ -12,6 +12,7 @@ background_color_class = "bg-gray"
 featured_image = "images/header/ion-loading_web_banner.gif"
 homeList = ["news", "publications"]
 favicon = "images/favicon.ico"
+custom_css = ["css/myStyle.css"]
 
 [markup]
   [markup.goldmark]
