--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = ""
+baseURL = "https://qiti.iqc.uwaterloo.ca/"
 languageCode = "en-us"
 title = "QUANTUM INFORMATION WITH TRAPPED IONS"
 subtitle = "University of Waterloo"
